// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component action negative 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-xe265e 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-18jpc09 6xysrj-hnqgw2 6xysrj-xe265e 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-18jpc09"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 727xeq-10883ij 6xysrj-x4enev 6xysrj-1vrz3gw 6xysrj-11hczkh 6xysrj-197pp75 6xysrj-x4enev 6xysrj-1vrz3gw 6xysrj-11hczkh 6xysrj-197pp75"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action positive 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-lxtrsj 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-15m3xlk 6xysrj-hnqgw2 6xysrj-lxtrsj 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-15m3xlk"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 727xeq-10883ij 6xysrj-x4enev 6xysrj-3noqo9 6xysrj-11hczkh 6xysrj-1tthglh 6xysrj-x4enev 6xysrj-3noqo9 6xysrj-11hczkh 6xysrj-1tthglh"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action primary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-11hczkh 6xysrj-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action secondary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-8r4mg3 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-14bfgb 6xysrj-hnqgw2 6xysrj-8r4mg3 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-14bfgb"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 727xeq-10883ij 6xysrj-x4enev 6xysrj-1wt7l86 6xysrj-11hczkh 6xysrj-1xgarii 6xysrj-x4enev 6xysrj-1wt7l86 6xysrj-11hczkh 6xysrj-1xgarii"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-1m88kvk 6xysrj-upz7x2 6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-1m88kvk 6xysrj-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 727xeq-10883ij 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-1n3pgep 6xysrj-1b07oxx 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-1n3pgep 6xysrj-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-upz7x2 6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 727xeq-10883ij 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-11hczkh 6xysrj-1b07oxx 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-11hczkh 6xysrj-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-npzoh9 6xysrj-upz7x2 6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-npzoh9 6xysrj-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 727xeq-10883ij 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-1q2dyj6 6xysrj-1b07oxx 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-1q2dyj6 6xysrj-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size xs 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-1yhbyhf 6xysrj-upz7x2 6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-1yhbyhf 6xysrj-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 727xeq-10883ij 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-193yier 6xysrj-1b07oxx 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-193yier 6xysrj-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant link 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-q0taf9 6xysrj-mjo3f8 6xysrj-n2zv0u 6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-q0taf9 6xysrj-mjo3f8 6xysrj-n2zv0u"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 727xeq-10883ij 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-11hczkh 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-11hczkh"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant outline 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-ha1mj1 6xysrj-mjo3f8 6xysrj-4s28py 6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-ha1mj1 6xysrj-mjo3f8 6xysrj-4s28py"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 727xeq-10883ij 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-11hczkh 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-11hczkh"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant solid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-upz7x2 6xysrj-hnqgw2 6xysrj-58zsu5 6xysrj-1qr77c8 6xysrj-mjo3f8 6xysrj-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 727xeq-10883ij 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-11hczkh 6xysrj-1b07oxx 6xysrj-x4enev 6xysrj-7s6zs0 6xysrj-11hczkh 6xysrj-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
